After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 764167 - Shortcuts to alternate between List and Icon views don't work
Shortcuts to alternate between List and Icon views don't work
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Views: All
3.19.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
: 767278 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2016-03-24 18:51 UTC by adria.arrufat
Modified: 2016-06-07 14:29 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
window-slot: fix shortcuts for changing view mode (1.61 KB, patch)
2016-03-24 19:45 UTC, Razvan Chitu
committed Details | Review

Description adria.arrufat 2016-03-24 18:51:26 UTC
I'm using Nautilus 3.19.93 and Ctrl+1 and Ctrl+2 do not switch to List and Icon Views, respectively.
It used to work in the 3.18 series.

I hope a fix can get in time before the 3.20 release.

Thank you

Adrià
Comment 1 Razvan Chitu 2016-03-24 19:45:48 UTC
Created attachment 324723 [details] [review]
window-slot: fix shortcuts for changing view mode

In Nautilus, the action for changing the view mode takes an unsigned integer as
parameter in order to determine to which mode to switch. The parameter's type
was not specified in the action name, which lead to the shortcuts not working.
In order to fix this, add the missing type.
Comment 2 Carlos Soriano 2016-03-29 07:35:59 UTC
Review of attachment 324723 [details] [review]:

ugh, good catch.

LGTM thanks!
master and gnome-3-20 please.
Comment 3 Razvan Chitu 2016-03-29 09:00:12 UTC
Comment on attachment 324723 [details] [review]
window-slot: fix shortcuts for changing view mode

Attachment 324723 [details] pushed as c8250f1 - window-slot: fix shortcuts for changing view mode
Attachment 324723 [details] pushed as 4f7a7f9 - window-slot: fix shortcuts for changing view mode
Comment 4 Ernestas Kulik 2016-06-07 13:50:25 UTC
*** Bug 767278 has been marked as a duplicate of this bug. ***